<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_cat"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cat_value"
        style="@style/ButtonStyle"/>


    <Button
        android:id="@+id/btn_thing_one"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_thing_one_value"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btn_thing_two"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_thing_two_value"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btn_thingamajigger"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_thingamajigger_value"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btn_sally"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sally_value"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/btn_nick"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_nick_value"
        style="@style/ButtonStyle"/>


    <Button
        android:id="@+id/btn_seuss"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_seuss_value"
        style="@style/ButtonStyle"
        android:background="@android:color/holo_red_light"/>

</LinearLayout>
